# CloudDrive

./: Cargo.toml  README.md  build.rs
src/: main.rs  server.rs  virtual_drive.rs
ui/: app.slint
