[package]
name = "drive_slint"
version = "0.1.0"
edition = "2024"

[dependencies]
slint = { version = "1.15.1" }
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.13.2", features = ["json", "multipart"] }
serde_json = "1.0"
aws-sdk-s3 = "1"
aws-config = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
dotenv = "0.15"
aws-types = "1"
rfd = "0.15"
urlencoding = "2.1"
walkdir = "2.5"
[build-dependencies]
slint-build = "1"
